added category list

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  animated_bottom_navigation_bar: ^1.1.0
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   bottom_sheet_bar: ^2.3.5
   pie_chart: ^5.3.2
-
-
-
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
